# xn_esp32_coze_chat_watering

./: README.md  partitions.csv  sdkconfig.defaults
components/xn_audio_manager/src/: audio_manager.c
components/xn_iot_manager_mqtt/src/: web_mqtt_manager.c
main/: CMakeLists.txt  main.c
main/audio_app/: audio_config_app.c
main/lottie_app/: lottie_app.c  lottie_app.h
main/mqtt_app/: watering_app.c  watering_app.h
xn_mqtt_server/: config.php  device_manage.php  header.php
xn_mqtt_server/api/: mqtt_ingest.php
